--- a/clase 6/index.html
+++ b/clase 6/index.html
@@ -26,7 +26,7 @@
     </header>
     <section>
       <h2><i class="fas fa-shopping-basket"></i> Ingredientes</h2>
-      <dl><h3>para la masa</h3>
+      <dl><h3>para la masa</h3> <!-- seguro que este h3 va acá? -->
       <dd type="none">200g. gramos de harina 0000</dt>
       <dd type= "none">50g. de azúcar</dd>
       <dd type="none"> 1 huevo </dd>
